--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="images/kisspng-turgutlu-sakall-letter-adala-typeface-s-5b172712c14d81.7471687915282439867918.png" />
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -31,6 +32,7 @@
     <table border="1">
 
         <tr>
+            <th>№</th>
             <th>ФИО</th>
             <th>Номер телефона</th>
             <th>Модель телефона</th>
@@ -44,6 +46,7 @@
             <th>Просрочка</th>
         </tr>
         <tr>
+            <td>1</td>
             <td></td>
             <td></td>
             <td>Redmi 7A</td>
