--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     </div>
                 </form>
             </div>
+        </div>>
 <!--        <table border="1">-->
 
 <!--            <tr>-->
